test: training plans been added. You can add plans for your trains and follow them step by step
